--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# configuration file; used for either dev or prod
+.env
+
 # compiled output
 /dist
 /tmp
