--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
