now getting info from mongodb

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build": "ng build && node server.js"
+    "build": "ng build  && node server.js"
   },
   "private": true,
   "dependencies": {
