added mongodb client

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "mongodb": "^2.2.25",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
